home/cloud-providers/gcp/taskset/task-025-managing-traffic-with-anthos-service-mesh/manifests/virtualservice--productpage-per-try-timeout-2s.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: productpage
spec:
  hosts:
    - productpage
  http:
    - route:
        - destination:
            host: productpage
            subset: v1
      retries:
        attempts: 1
        perTryTimeout: 2s
